--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,30 @@
   scrollbar-width: thin;
 }
 
-*::-webkit-scrollbar {
-  width: 8px;
-  background-color: #3c0e06;
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(34, 13, 13);
+  border-radius: 10px;
+  height: 5px;
+}
+
+/* ::-webkit-scrollbar-button {
+  height: 100px;
+} */
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(126, 10, 10);
 }
 
 a {
